# Homework2.10

Homework2.10.1/: main.cpp
Homework2.10.2/: CMakeLists.txt  Homework2.6.3.cpp
